--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 DB_URI=mongodb+srv://Minal:manaalfatima6@cluster0.scnmzjn.mongodb.net/
 PORT=8000
-HOST=https://ride-together-mybackend.onrender.com
+HOST=127.0.0.1
+# HOST=https://ride-together-mybackend.onrender.com
 JWT_PRIVATE_KEY=JWT_PRIVATE_KEY
