--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ PORT=8001
 HOST=127.0.0.1
 # HOST=https://ride-together-mybackend.onrender.com
 JWT_PRIVATE_KEY=JWT_PRIVATE_KEY
+
+GOOGLE_APPLICATION_CREDENTIALS="D:\manaal\Ride-Together-myBackend\push-notification-6f275-5fe46dc0eeae.json"
