--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase-admin": "^12.4.0",
     "geolib": "^3.3.4",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
