--- a/.env
+++ b/.env
@@ -4,4 +4,9 @@ HOST=127.0.0.1
 # HOST=https://ride-together-mybackend.onrender.com
 JWT_PRIVATE_KEY=JWT_PRIVATE_KEY
 
-GOOGLE_APPLICATION_CREDENTIALS="D:\manaal\Ride-Together-myBackend\push-notification-6f275-5fe46dc0eeae.json"
+
+# DB_URI=mongodb+srv://iqra:Easy0990@cluster0.hruzh2y.mongodb.net/
+# PORT=8081
+# HOST=127.0.0.1
+# node_mailer_passkey=fyft rdfs eprw cktz
+# JWT_PRIVATE_KEY=JWT_PRIVATE_KEY
