--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-DB_URI=mongodb+srv://Minal:manaalfatima6@cluster0.scnmzjn.mongodb.net/
-PORT=8001
-HOST=127.0.0.1
-# HOST=https://ride-together-mybackend.onrender.com
-JWT_PRIVATE_KEY=JWT_PRIVATE_KEY
-
-
-# DB_URI=mongodb+srv://iqra:Easy0990@cluster0.hruzh2y.mongodb.net/
-# PORT=8081
+# DB_URI=mongodb+srv://Minal:manaalfatima6@cluster0.scnmzjn.mongodb.net/
+# PORT=8001
 # HOST=127.0.0.1
-# node_mailer_passkey=fyft rdfs eprw cktz
+# # HOST=https://ride-together-mybackend.onrender.com
 # JWT_PRIVATE_KEY=JWT_PRIVATE_KEY
+
+
+DB_URI=mongodb+srv://iqra:Easy0990@cluster0.hruzh2y.mongodb.net/
+PORT=8081
+HOST=127.0.0.1
+node_mailer_passkey=fyft rdfs eprw cktz
+JWT_PRIVATE_KEY=JWT_PRIVATE_KEY
